* fixed hero animation rendering bug in swing gui * some code cleaning